Clean up project, and fix maven.